# webserve

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  test.cpp
config_tester/: excve.sh  pkill.sh  tester.sh
config_tester/Simple/AllowMethod/: duplicate.conf
config_tester/Simple/Autoindex/: invalid.conf  off.conf
config_tester/Simple/CgiConfig/: default.conf  invalid00.conf  invalid01.conf  null.conf
config_tester/Simple/ClientMax/: alpha.conf  argument.conf  ok.conf  overflow.conf  special.conf
config_tester/SimpleTest/: ErrorOnlyPort.conf  NoPort.conf  client_size.conf
docs/: Diagram.drawio  TDD.md  classSpecification.md  convention.md  lib_function.md  project_structure.md  project_tutorials.md  test_driven_development.md  webserve_architecture.md  webserve_ko.md
docs/ClassDiagram/: ClassDiagram.md  Diagram.drawio
docs/ClassSepecification/: [1-4]classSpecification.md  [5]server_handler.md  [6]http_message.md  [7]configuration.md  [8]lib_function.md  [8]log_module.md  [9]cgi.md  classSpecification.md  http_message.md  lib_function.md  server_handler.md  server_module.md
docs/FlowChart/: Flow_Chart.drawio  flowchart.md
docs/Study/: http_method.md  study.md  test_driven_development.md
docs/html/: _block_8cpp.html  _block_8cpp_source.html  _block_8hpp.html  _block_8hpp_source.html  _conf_2_conf_8cpp.html  _conf_2_conf_8cpp_source.html  _conf_2_conf_8hpp.html  _conf_2_conf_8hpp_source.html  _configuration_2_conf_2_conf_8cpp.html  _configuration_2_conf_2_conf_8cpp_source.html  _configuration_2_conf_2_conf_8hpp.html  _configuration_2_conf_2_conf_8hpp_source.html  _configuration_2_location_block_2_location_block_8cpp.html  _configuration_2_location_block_2_location_block_8cpp_source.html  _configuration_2_location_block_2_location_block_8hpp.html  _configuration_2_location_block_2_location_block_8hpp_source.html  _http_message_8cpp.html  _http_message_8cpp_source.html  _http_message_8hpp.html  _http_message_8hpp_source.html  _http_request_message_8cpp.html  _http_request_message_8cpp_source.html  _http_request_message_8hpp.html  _http_request_message_8hpp_source.html  _http_response_message_8cpp.html  _http_response_message_8cpp_source.html  _http_response_message_8hpp.html  _http_response_message_8hpp_source.html  _location_block__old_2_location_block_8cpp.html  _location_block__old_2_location_block_8cpp_source.html  _location_block__old_2_location_block_8hpp.html  _location_block__old_2_location_block_8hpp_source.html  _server_8cpp.html  _server_8cpp_source.html  _server_8hpp.html  _server_8hpp_source.html  _server_block_8cpp.html  _server_block_8cpp_source.html  _server_block_8hpp.html  _server_block_8hpp_source.html  (+1180 more)
docs/html/search/: all_0.js  (+69 more)
docs/latex/: _block_8cpp.tex  _block_8cpp_source.tex  _block_8hpp.tex  _block_8hpp_source.tex  _conf_2_conf_8cpp.tex  _conf_2_conf_8cpp_source.tex  _conf_2_conf_8hpp.tex  _conf_2_conf_8hpp_source.tex  _configuration_2_conf_2_conf_8cpp.tex  _configuration_2_conf_2_conf_8cpp_source.tex  _configuration_2_conf_2_conf_8hpp.tex  _configuration_2_conf_2_conf_8hpp_source.tex  _configuration_2_location_block_2_location_block_8cpp.tex  _configuration_2_location_block_2_location_block_8cpp_source.tex  _configuration_2_location_block_2_location_block_8hpp.tex  _configuration_2_location_block_2_location_block_8hpp_source.tex  _http_message_8cpp.tex  _http_message_8cpp_source.tex  _http_message_8hpp.tex  _http_message_8hpp_source.tex  _http_request_message_8cpp.tex  _http_request_message_8cpp_source.tex  _http_request_message_8hpp.tex  _http_request_message_8hpp_source.tex  _http_response_message_8cpp.tex  _http_response_message_8cpp_source.tex  _http_response_message_8hpp.tex  _http_response_message_8hpp_source.tex  _location_block__old_2_location_block_8cpp.tex  _location_block__old_2_location_block_8cpp_source.tex  _location_block__old_2_location_block_8hpp.tex  _location_block__old_2_location_block_8hpp_source.tex  _server_8cpp.tex  _server_8cpp_source.tex  _server_8hpp.tex  _server_8hpp_source.tex  _server_block_8cpp.tex  _server_block_8cpp_source.tex  _server_block_8hpp.tex  _server_block_8hpp_source.tex  (+866 more)
example/: Makefile
example/include/: http_request_message.hpp  test_client.hpp  test_webserve.hpp
example/srcs/: test_client.cpp  test_server.cpp  test_webserve.cpp
include/: test_client.hpp  test_server.hpp  test_webserve.hpp  webserve.hpp
srcs/: test_client.cpp
var/conf/: all.conf  default.conf  default1.conf  test.conf  test1.conf  tester.conf  webserv.conf
var/html/: a.html  index.html  test.html  upload.html
webserve/: Makefile  main.cpp  temp  temp2  webserv
webserve/Block/: Block.cpp  Block.hpp
webserve/Buffer/: Buffer.cpp  Buffer.hpp
webserve/CGI/: CGI.cpp  CGI.hpp
webserve/CommonLogFormat/: CommonLogFormat.cpp  CommonLogFormat.hpp  CommonLogFormat.test.cpp
webserve/Conf/: Conf.cpp  Conf.hpp
webserve/Configuration/: config.test.cpp
webserve/Connection/: Connection.cpp  Connection.hpp
webserve/HttpMessage/: HttpMessage.cpp  HttpMessage.hpp  HttpMessage.test.cpp  HttpRequestMessage.cpp  HttpRequestMessage.hpp  HttpResponseMessage.cpp  HttpResponseMessage.hpp  RequestMessageParser.cpp  RequestMessageParser.hpp
webserve/LocationBlock/: LocationBlock.cpp
webserve/LocationBlock_old/: LocationBlock.hpp  LocationBlock.test.cpp
webserve/LocationParser/: LocationParser.cpp  LocationParser.hpp  LocationParser.test.cpp
webserve/Parser/: Parser.cpp  Parser.hpp  Parser.test.cpp
webserve/Server/: Server.cpp  Server.hpp
webserve/ServerBlock/: ServerBlock.cpp  ServerBlock.hpp  testServerBlock.cpp
webserve/ServerController/: ServerController.cpp  ServerController.hpp
webserve/ServerHandler/: ServerHandler.cpp  ServerHandler.hpp  ServerHandler.test.cpp
webserve/ServerModule/: ServerModule.cpp  ServerModule.hpp
webserve/ServerParser/: ServerParser.cpp  ServerParser.hpp  testServerParser.cpp
webserve/ServerRun/: ServerRun.cpp  ServerRun.hpp
webserve/TestExample/: TestExample.cpp  TestExample.hpp  TestExample.test.cpp
webserve/WebServer/: WebServer.cpp  WebServer.hpp
(+119 files in other folders)
